Source/WebKit2/UIProcess/Plugins/qt/PluginProcessProxyQt.cpp
@@ -208,7 +208,7 @@ bool PluginProcessProxy::scanPlugin(const String& pluginPath, RawPluginMetaData&
         String output(reinterpret_cast<const UChar*>(outputBytes.constData()), outputBytes.size() / sizeof(UChar));
         Vector<String> lines;
         output.split(UChar('\n'), true, lines);
-        ASSERT(lines.size() == 3);
+        ASSERT(lines.size() == 4 && lines.last().isEmpty());
 
         result.name.swap(lines[0]);
         result.description.swap(lines[1]);
